# pruthvi-dashboard

./: .gitignore  README.md  api_timing_dashboard.py  app.js  conversations.csv  diff.js  index.html  main.py  pyproject.toml  requirements.txt  requirements_dashboard.txt  streamlit_app.py  style.css
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/models/: schemas.py
app/routers/: analyze.py  export.py  transcribe.py
app/services/: diarization_service.py  excel_service.py  llm_service.py  whisper_service.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
postman/: Order_Management_Mock_APIs.postman_collection.json
resource-management/: Code.gs  README.md
