[project]
name = "textcompare-claude-parse-api-timing-data-ezgfh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=2.14.0",
    "eval-type-backport>=0.3.1",
    "fastapi==0.115.0",
    "librosa>=0.10.0",
    "openai>=1.30.0",
    "openai-whisper>=20250625",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pydub==0.25.1",
    "python-multipart==0.0.9",
    "scikit-learn>=1.3.0",
    "setuptools>=82.0.1",
    "streamlit>=1.39.0",
    "uvicorn[standard]==0.30.0",
    "xlrd>=2.0.0",
]
